--- a/src/2-多行文本.html
+++ b/src/2-多行文本.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>单行文本溢出省略号</title>
+    <title>常用css片段总结</title>
     <style>
       *{
         margin: 0;
