--- a/src/4-自定义文本选中的样式.html
+++ b/src/4-自定义文本选中的样式.html
@@ -6,32 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>常用css片段总结</title>
     <style>
-      *{
+      * {
         margin: 0;
         padding: 0;
       }
 
-      body{
+      body {
         padding: 15px;
         color: #324b64;
       }
 
-      .parent{
-        padding: 0 10px;
+      .box > p {
+        padding: 10px;
         background-color: #f5f6f9;
-        height: 100px;
         border-radius: 6px;
-        font-size: 14px;
+        font-size: 12px;
 
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        margin-bottom: 15px;
+      }
+
+      .box-custom::selection {
+        color: #ffffff;
+        background-color: #ff4c9f;
       }
     </style>
   </head>
   <body>
-    <div class="parent">
-      <p class="child">每次临时抱佛脚的时候--佛祖他总是给我一脚</p>
+    <div class="box">
+      <p class="box-default">
+        昨天遇见小学同学，没有想到他混的这么差--只放了一块钱到我的碗里
+      </p>
+      <p class="box-custom">
+        今年情人节，不出意外的话，一个人过，出意外的话--去医院过
+      </p>
     </div>
 
     <!-- 每次跟别人吵架感觉都和考试一样，事后想起来--总是觉得没有发挥好 -->
