--- a/19.改变光标颜色.html
+++ b/19.改变光标颜色.html
@@ -27,6 +27,7 @@
         outline: none;
         color: #ffd476;
         font-size: 14px;
+        /* 关键css */
         caret-color: #ffd476;
       }
 
