--- a/1-单行文本溢出.html
+++ b/1-单行文本溢出.html
@@ -27,14 +27,13 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        /* 非必须，只是为了制造一行放不下的效果 */
         max-width: 375px; 
       }
     </style>
   </head>
   <body>
     <div class="box">
-      <p class="one-line-ellipsis">不要轻易向命运低头，因为一低头就会看到赘肉 如果你愿意一层一层剥开我的心</p>
+      <p class="one-line-ellipsis">Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish,Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish</p>
     </div>
   </body>
 </html>
