--- a/10-修改placehoder样式.html
+++ b/10-修改placehoder样式.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <input type="text" class="placehoder-custom" placeholder="请输入用户名搜索">
-    <input type="text" placeholder="请输入用户名搜索">
+    <input type="text" class="placehoder-custom" placeholder="Please enter user name to search">
+    <input type="text" placeholder="Please enter user name to search">
   </body>
 </html>
