--- a/15-图片固定比例.html
+++ b/15-图片固定比例.html
@@ -16,7 +16,7 @@
       }
 
       .box, .box-vw{
-        background-color: #f5f6f9;
+        background-color: #010102;
         border-radius: 10px;
         overflow: hidden;
         margin-bottom: 15px;
