--- a/17.巧用not选择器.html
+++ b/17.巧用not选择器.html
@@ -50,38 +50,20 @@
 <body>
   <ul>
     <li>
-      <span>单元格</span>
-      <span>内容</span>
+      <span>cell</span>
+      <span>content</span>
     </li>
     <li>
-      <span>单元格</span>
-      <span>内容</span>
+      <span>cell</span>
+      <span>content</span>
     </li>
     <li>
-      <span>单元格</span>
-      <span>内容</span>
+      <span>cell</span>
+      <span>content</span>
     </li>
     <li>
-      <span>单元格</span>
-      <span>内容</span>
-    </li>
-  </ul>
-  <ul>
-    <li>
-      <span>单元格</span>
-      <span>内容</span>
-    </li>
-    <li>
-      <span>单元格</span>
-      <span>内容</span>
-    </li>
-    <li>
-      <span>单元格</span>
-      <span>内容</span>
-    </li>
-    <li>
-      <span>单元格</span>
-      <span>内容</span>
+      <span>cell</span>
+      <span>content</span>
     </li>
   </ul>
 </body>
