--- a/2-多行文本.html
+++ b/2-多行文本.html
@@ -28,7 +28,7 @@
         text-overflow: ellipsis;
 
         display: -webkit-box;
-        /* 设置n行 */
+        /* set n lines, including 1 */
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
       }
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="box">
-      <p class="more-line-ellipsis">上帝对人都是公平的给了你丑外表--也会配给你低智商 如果你愿意一层一层剥开我的心，你会发现--我缺心眼啊！</p>
+      <p class="more-line-ellipsis">Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish,Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish, Hello Fatfish</p>
     </div>
   </body>
 </html>
