--- a/21.移出状态线.html
+++ b/21.移出状态线.html
@@ -51,10 +51,10 @@
           }
 
           /* 关键css */
-          .no-outline::-webkit-outer-spin-button,
+          /* .no-outline::-webkit-outer-spin-button,
           .no-outline::-webkit-inner-spin-button {
             -webkit-appearance: none;
-          }
+          } */
         </style>
       </head>
       <body>
