--- a/23.跟随窗口高度.html
+++ b/23.跟随窗口高度.html
@@ -9,6 +9,7 @@
     *{
       margin: 0;
       padding: 0;
+      /* height: 100%; */
     }
     
     .child{
@@ -20,7 +21,9 @@
 </head>
 <body>
   <div class="app">
-    <div class="child"></div>
+    <div class="child">
+      
+    </div>
   </div>
 </body>
 </html>
