--- a/3-水平垂直居中.html
+++ b/3-水平垂直居中.html
@@ -31,7 +31,8 @@
   </head>
   <body>
     <div class="parent">
-      <p class="child">每次临时抱佛脚的时候--佛祖他总是给我一脚</p>
+      <p class="child">I'm fatfish, 6 years of programming experience, like front-end, writing
+        and making friends, looking forward to becoming good friends with you.</p>
     </div>
 
     <!-- 每次跟别人吵架感觉都和考试一样，事后想起来--总是觉得没有发挥好 -->
