--- a/4-自定义文本选中的样式.html
+++ b/4-自定义文本选中的样式.html
@@ -34,10 +34,12 @@
   <body>
     <div class="box">
       <p class="box-default">
-        昨天遇见小学同学，没有想到他混的这么差--只放了一块钱到我的碗里
+        I'm fatfish, 6 years of programming experience, like front-end, writing
+        and making friends, looking forward to becoming good friends with you.
       </p>
       <p class="box-custom">
-        今年情人节，不出意外的话，一个人过，出意外的话--去医院过
+        I'm fatfish, 6 years of programming experience, like front-end, writing
+        and making friends, looking forward to becoming good friends with you.
       </p>
     </div>
 
