--- a/6-禁止选择文本.html
+++ b/6-禁止选择文本.html
@@ -31,8 +31,10 @@
   </head>
   <body>
     <div class="box">
-      <p>好不容易习惯了自己的长相--去理了个发，又换了一种丑法</p>
-      <p>国庆节放假，想跟女朋友去旅游，请大家帮忙推荐下--哪里有女朋友</p>
+      <p> I'm fatfish, 6 years of programming experience, like front-end, writing
+        and making friends, looking forward to becoming good friends with you.</p>
+      <p> I'm fatfish, 6 years of programming experience, like front-end, writing
+        and making friends, looking forward to becoming good friends with you.</p>
     </div>
   </body>
 </html>
