--- a/7-隐藏滚动条.html
+++ b/7-隐藏滚动条.html
@@ -38,12 +38,15 @@
   <body>
     <div class="box">
       <div>
-        爱情会离开，朋友会离开，快乐会离开，但是考试不会因为你不会就不会
+        I'm fatfish, 6 years of programming experience, like front-end, writing
+        and making friends, looking forward to becoming good friends with you.
       </div>
     </div>
-
     <div class="box box-hide-scrollbar">
-      <div>只是因为在人群中多看了你一眼，你就--问我游泳健身了解一下？</div>
+      <div>
+        I'm fatfish, 6 years of programming experience, like front-end, writing
+        and making friends, looking forward to becoming good friends with you.
+      </div>
     </div>
   </body>
 </html>
